--- a/src/stories/Header.stories.mdx
+++ b/src/stories/Header.stories.mdx
@@ -1,6 +1,6 @@
 import * as UI from '../../lib'
 
-import { Canvas, Meta, Story } from '@storybook/addon-docs/blocks'
+import { Canvas, Meta, Story } from '@storybook/addon-docs'
 
 <Meta title="Header"/>
 
