--- a/src/stories/forms/Options.stories.mdx
+++ b/src/stories/forms/Options.stories.mdx
@@ -1,6 +1,6 @@
 import * as UI from '../../../lib'
 
-import { Canvas, Meta, Story } from '@storybook/addon-docs/blocks'
+import { Canvas, Meta, Story } from '@storybook/addon-docs'
 import { action } from '@storybook/addon-actions'
 
 <Meta title="Forms/Options" />
