--- a/src/stories/Images.stories.mdx
+++ b/src/stories/Images.stories.mdx
@@ -1,33 +1,31 @@
-import * as UI from '../../lib'
+import * as UI from "../../lib";
 
-import { Canvas, Meta, Story } from '@storybook/addon-docs'
-import { rawJsonDecorator } from './decorators'
+import { Canvas, Meta, Story } from "@storybook/addon-docs";
+import { rawJsonDecorator } from "./decorators";
 
 export const imageDecorator = (Story) => {
-  const result = Story()
+  const result = Story();
   return `
             <div>Returns:</div>
             <pre>${result}</pre>
             <p>Preview:</p>
             <img src="${result}" width="80" />
-`
-}
+`;
+};
 
-<Meta title="Images"/>
+<Meta title="Images" />
 
 ## findImage
 
 Find something we have as explicit image data for the thing
 
-[API Documentation](https://solid.github.io/solid-ui/Documentation/api/modules/_widgets_buttons_.html#findimage)
+[API Documentation](https://solidos.github.io/solid-ui/Documentation/api/modules/_widgets_buttons_.html#findimage)
 
 ### for foaf:Agent
 
 <Canvas withSource="open">
   <Story name="for foaf:Agent" decorators={[imageDecorator]}>
-    {
-      UI.widgets.findImage(UI.ns.foaf('Agent'))
-    }
+    {UI.widgets.findImage(UI.ns.foaf("Agent"))}
   </Story>
 </Canvas>
 
@@ -35,9 +33,7 @@ Find something we have as explicit image data for the thing
 
 <Canvas withSource="open">
   <Story name="for rdf:Resource" decorators={[imageDecorator]}>
-    {
-      UI.widgets.findImage(UI.ns.rdf('Resource'))
-    }
+    {UI.widgets.findImage(UI.ns.rdf("Resource"))}
   </Story>
 </Canvas>
 
@@ -46,10 +42,10 @@ Find something we have as explicit image data for the thing
 <Canvas withSource="open">
   <Story name="with vcard:hasPhoto" decorators={[imageDecorator]}>
     {() => {
-      const person = UI.rdf.namedNode('https://person.example/1#me')
-      const photo = UI.rdf.namedNode('https://michielbdejong.com/img/me.jpg')
-      UI.store.add(person, UI.ns.vcard('hasPhoto'), photo)
-      return UI.widgets.findImage(person)
+      const person = UI.rdf.namedNode("https://person.example/1#me");
+      const photo = UI.rdf.namedNode("https://michielbdejong.com/img/me.jpg");
+      UI.store.add(person, UI.ns.vcard("hasPhoto"), photo);
+      return UI.widgets.findImage(person);
     }}
   </Story>
 </Canvas>
@@ -59,10 +55,10 @@ Find something we have as explicit image data for the thing
 <Canvas withSource="open">
   <Story name="with foaf:img" decorators={[imageDecorator]}>
     {() => {
-      const person = UI.rdf.namedNode('https://person.example/2#me')
-      const photo = UI.rdf.namedNode('https://michielbdejong.com/img/me.jpg')
-      UI.store.add(person, UI.ns.foaf('img'), photo)
-      return UI.widgets.findImage(person)
+      const person = UI.rdf.namedNode("https://person.example/2#me");
+      const photo = UI.rdf.namedNode("https://michielbdejong.com/img/me.jpg");
+      UI.store.add(person, UI.ns.foaf("img"), photo);
+      return UI.widgets.findImage(person);
     }}
   </Story>
 </Canvas>
@@ -71,15 +67,13 @@ Find something we have as explicit image data for the thing
 
 Find an image for this thing as a class
 
-[API Documentation](https://solid.github.io/solid-ui/Documentation/api/modules/_widgets_buttons_.html#findimagefromuri)
+[API Documentation](https://solidos.github.io/solid-ui/Documentation/api/modules/_widgets_buttons_.html#findimagefromuri)
 
 ### without favicon
 
 <Canvas withSource="open">
   <Story name="without favicon" decorators={[imageDecorator]}>
-    {
-      UI.widgets.findImageFromURI(UI.rdf.namedNode('https://example.com/'))
-    }
+    {UI.widgets.findImageFromURI(UI.rdf.namedNode("https://example.com/"))}
   </Story>
 </Canvas>
 
@@ -87,9 +81,7 @@ Find an image for this thing as a class
 
 <Canvas withSource="open">
   <Story name="favicon" decorators={[imageDecorator]}>
-    {
-      UI.widgets.findImageFromURI(UI.rdf.namedNode('https://solidproject.org/some/file.html'))
-    }
+    {UI.widgets.findImageFromURI(UI.rdf.namedNode("https://solidproject.org/some/file.html"))}
   </Story>
 </Canvas>
 
@@ -97,9 +89,7 @@ Find an image for this thing as a class
 
 <Canvas withSource="open">
   <Story name="Message-ID" decorators={[imageDecorator]}>
-    {
-      UI.widgets.findImageFromURI(UI.rdf.namedNode('mid:example'))
-    }
+    {UI.widgets.findImageFromURI(UI.rdf.namedNode("mid:example"))}
   </Story>
 </Canvas>
 
@@ -107,9 +97,7 @@ Find an image for this thing as a class
 
 <Canvas withSource="open">
   <Story name="E-Mail" decorators={[imageDecorator]}>
-    {
-      UI.widgets.findImageFromURI(UI.rdf.namedNode('mailto:user@mail.example'))
-    }
+    {UI.widgets.findImageFromURI(UI.rdf.namedNode("mailto:user@mail.example"))}
   </Story>
 </Canvas>
 
@@ -117,39 +105,35 @@ Find an image for this thing as a class
 
 Set of suitable images
 
-[API Documentation](https://solid.github.io/solid-ui/Documentation/api/modules/_widgets_buttons_.html#imagesof)
+[API Documentation](https://solidos.github.io/solid-ui/Documentation/api/modules/_widgets_buttons_.html#imagesof)
 
 <Canvas withSource="open">
   <Story name="imagesOf" decorators={[rawJsonDecorator]}>
-    {
-      () => {
-        const store = UI.rdf.graph()
-        const thing = UI.rdf.namedNode('http://thing.example/resource#it')
-        const avatar = UI.rdf.namedNode('https://pod.example/image1.png')
-        const image = UI.rdf.namedNode('https://pod.example/image2.jpg')
-        store.add(thing, UI.ns.sioc('avatar'), avatar)
-        store.add(thing, UI.ns.foaf('img'), image)
-        return UI.widgets.imagesOf(thing, store)
-      }
-    }
+    {() => {
+      const store = UI.rdf.graph();
+      const thing = UI.rdf.namedNode("http://thing.example/resource#it");
+      const avatar = UI.rdf.namedNode("https://pod.example/image1.png");
+      const image = UI.rdf.namedNode("https://pod.example/image2.jpg");
+      store.add(thing, UI.ns.sioc("avatar"), avatar);
+      store.add(thing, UI.ns.foaf("img"), image);
+      return UI.widgets.imagesOf(thing, store);
+    }}
   </Story>
 </Canvas>
 
 ## setImage
 
-[API Documentation](https://solid.github.io/solid-ui/Documentation/api/modules/_widgets_buttons_.html#setimage)
+[API Documentation](https://solidos.github.io/solid-ui/Documentation/api/modules/_widgets_buttons_.html#setimage)
 
 <Canvas withSource="open">
   <Story name="setImage">
-    {
-      () => {
-        const myTrip = UI.rdf.namedNode('http://example.com/#trip')
-        UI.store.add(myTrip, UI.ns.rdf('type'), UI.ns.trip('Trip'))
-        const img = document.createElement('img')
-        img.setAttribute('style', 'height:50px;width:50px;')
-        UI.widgets.setImage(img, myTrip)
-        return img
-      }
-    }
+    {() => {
+      const myTrip = UI.rdf.namedNode("http://example.com/#trip");
+      UI.store.add(myTrip, UI.ns.rdf("type"), UI.ns.trip("Trip"));
+      const img = document.createElement("img");
+      img.setAttribute("style", "height:50px;width:50px;");
+      UI.widgets.setImage(img, myTrip);
+      return img;
+    }}
   </Story>
 </Canvas>
