--- a/src/stories/forms/Intro.stories.mdx
+++ b/src/stories/forms/Intro.stories.mdx
@@ -1,13 +1,13 @@
-import * as UI from '../../../lib'
+import * as UI from "../../../lib";
 
-import { Canvas, Meta, Story } from '@storybook/addon-docs'
+import { Canvas, Meta, Story } from "@storybook/addon-docs";
 
 <Meta title="Forms/Documentation" />
 
 ## See also
 
-  * [Forms intro](https://solid.github.io/solid-ui/Documentation/forms-intro.html)
-  * [Form ecosystem](https://solid.github.io/solid-ui//Documentation/form-ecosystem.html)
-  * [Form Playground](https://solid.github.io/form-playground/playground.html)
-  * [Form Browse](https://solid.github.io/form-playground/browse.html)
-  * [API docs](https://solid.github.io/solid-ui/Documentation/api/)
+- [Forms intro](https://solidos.github.io/solid-ui/Documentation/forms-intro.html)
+- [Form ecosystem](https://solidos.github.io/solid-ui//Documentation/form-ecosystem.html)
+- [Form Playground](https://solidos.github.io/form-playground/playground.html)
+- [Form Browse](https://solidos.github.io/form-playground/browse.html)
+- [API docs](https://solidos.github.io/solid-ui/Documentation/api/)
