--- a/src/stories/Display.stories.mdx
+++ b/src/stories/Display.stories.mdx
@@ -1,37 +1,32 @@
-import * as UI from '../../lib'
+import * as UI from "../../lib";
 
-import { Canvas, Meta, Story } from '@storybook/addon-docs'
+import { Canvas, Meta, Story } from "@storybook/addon-docs";
 
-<Meta title="Display"/>
+<Meta title="Display" />
 
 ## complain
 
-[API documentation](https://solid.github.io/solid-ui/Documentation/api/modules/_widgets_buttons_.html#complain)
+[API documentation](https://solidos.github.io/solid-ui/Documentation/api/modules/_widgets_buttons_.html#complain)
 
 <Canvas>
   <Story name="complain">
-    {
-      () => {
-        const div = document.createElement("div");
-        UI.widgets.complain({ div, dom: document }, 'not good!')
-        return div
-      }
-    }
+    {() => {
+      const div = document.createElement("div");
+      UI.widgets.complain({ div, dom: document }, "not good!");
+      return div;
+    }}
   </Story>
 </Canvas>
 
-
 ## errorMessageBlock
 
-[API documentation](https://solid.github.io/solid-ui/Documentation/api/modules/_widgets_error_.html#errormessageblock)
+[API documentation](https://solidos.github.io/solid-ui/Documentation/api/modules/_widgets_error_.html#errormessageblock)
 
 <Canvas>
   <Story name="errorMessageBlock">
-    {
-      () => {
-        return UI.widgets.errorMessageBlock(document, 'my error message', '#f0f')
-      }
-    }
+    {() => {
+      return UI.widgets.errorMessageBlock(document, "my error message", "#f0f");
+    }}
   </Story>
 </Canvas>
 
@@ -39,18 +34,16 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs'
 
 Sets the best name we have and looks up a better one
 
-[API documentation](https://solid.github.io/solid-ui/Documentation/api/modules/_widgets_buttons_.html#setname)
+[API documentation](https://solidos.github.io/solid-ui/Documentation/api/modules/_widgets_buttons_.html#setname)
 
 <Canvas>
   <Story name="setName">
-    {
-      () => {
-        const div = document.createElement("div")
-        const jane = UI.rdf.namedNode('https://jane.example/person/card#me')
-        UI.store.add(jane, UI.ns.foaf('name'), 'Jane Doe')
-        UI.widgets.setName(div, jane)
-        return div
-      }
-    }
+    {() => {
+      const div = document.createElement("div");
+      const jane = UI.rdf.namedNode("https://jane.example/person/card#me");
+      UI.store.add(jane, UI.ns.foaf("name"), "Jane Doe");
+      UI.widgets.setName(div, jane);
+      return div;
+    }}
   </Story>
 </Canvas>
