--- a/src/stories/Events.stories.mdx
+++ b/src/stories/Events.stories.mdx
@@ -1,7 +1,7 @@
-import * as UI from '../../lib'
+import * as UI from "../../lib";
 
-import { Canvas, Meta, Story } from '@storybook/addon-docs';
-import { action } from '@storybook/addon-actions'
+import { Canvas, Meta, Story } from "@storybook/addon-docs";
+import { action } from "@storybook/addon-actions";
 
 <Meta title="Events" />
 
@@ -9,24 +9,22 @@ import { action } from '@storybook/addon-actions'
 
 Event Handler for links within solid apps.
 
-[API Documentation](https://solid.github.io/solid-ui/Documentation/api/modules/_widgets_buttons_.html#openhrefinoutlinemode)
+[API Documentation](https://solidos.github.io/solid-ui/Documentation/api/modules/_widgets_buttons_.html#openhrefinoutlinemode)
 
 <Canvas withSource="open">
   <Story name="openHrefInOutlineMode">
-    {
-      () => {
-        document.outlineManager = {
-          GotoSubject: action('go to subject')
-        }
-        const anchor = document.createElement('a')
-        anchor.setAttribute('href', 'http://example.com')
-        anchor.onclick = (e) => {
-          UI.widgets.openHrefInOutlineMode(e)
-          return false
-        }
-        anchor.appendChild(document.createTextNode('click me'))
-        return anchor
-      }
-    }
+    {() => {
+      document.outlineManager = {
+        GotoSubject: action("go to subject"),
+      };
+      const anchor = document.createElement("a");
+      anchor.setAttribute("href", "http://example.com");
+      anchor.onclick = (e) => {
+        UI.widgets.openHrefInOutlineMode(e);
+        return false;
+      };
+      anchor.appendChild(document.createTextNode("click me"));
+      return anchor;
+    }}
   </Story>
 </Canvas>
